--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 
@@ -43,7 +45,7 @@
     </div>
     <div data-key="76" class="key">
       <kbd>L</kbd>
-      <span class="sound">tink</span>
+      <span class="sound" id="harsh">tink</span>
     </div>
   </div>
 
@@ -57,29 +59,30 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
     function playSound(e) {
-        const audio =  document.querySelector(`audio[data-key="${e.keyCode}"`);
-         const key = document.querySelector(`.key[data-key="${e.keyCode}"`);
-         if(!audio) return;
-         audio.currentTime = 0;
-         audio.play();
-         key.classList.add('playing');
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"`);
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"`);
+      if (!audio) return;
+      audio.currentTime = 0;
+      audio.play();
+      key.classList.add('playing');
     }
 
 
-    function removeTransition(e){
-        if(e.propertyName !== 'transform') return;
-        console.log(e);
-        this.classList.remove('playing');
+    function removeTransition(e) {
+      if (e.propertyName !== 'transform') return;
+      console.log(e);
+      this.classList.remove('playing');
     }
     const keys = document.querySelectorAll('.key');
-    keys.forEach(key => key.addEventListener('transitionend',removeTransition));
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
     window.addEventListener('keydown', playSound); //
-    
-</script>
+
+  </script>
 
 
 </body>
+
 </html>
